# UR5_SRUB_NURSE

./: .gitignore  Prueba.py  README.md  UR.py  activacion_voz.py  alt.py  comados.json  index.html  main.py  mensajes.json  requirements.txt  requirements_2.txt  take_photo.py  test_model.py  ur5_controller.py  voice_activation.py
3D_Models/: Ensamblaje.STEP  Ensamblaje1.SLDASM
3D_Models/OLD/: gripper1 v10.SLDPRT  gripper1 v10.step
3D_Models/SLDPRT/: Base.SLDPRT  Camara.SLDPRT  Cople - copia.SLDPRT  Iman.SLDPRT  Pestillo.SLDPRT
3D_Models/STEP/: Base.STEP  Camara.STEP  Cople.STEP  Iman.STEP  Pestillo.STEP
ChatBox/: Ejemplo.py  activacion_voz.py  audio_interfaz.py  prueba_tts.py  test_tts_fireforx.py
Chava/: UR.py  client.py  mano.py
Dashboard/: .gitignore  app.json  app.py  package-lock.json  package.json
Dashboard/static/: styles.css
Dashboard/templates/: controls.html  dashboard.html  header.html  index.html  instrument-selection.html  robot-coordinates.html  toggle-controls.html
Train/: README.dataset.txt  README.roboflow.txt  data.yaml
V0.1/: Mano_no_oob.py  client.py  coordinates.py  debug.py  hand.py  hand_memo.py  mano.py  pruebas.py  segmentation.py  voz.py
V1.0/Backup/: activacion_voz copy.py  saved-10-09-24--UR.py  saved-19-08-24--UR.py  saved-22-09-24--UR.py
V1.0/Scripts/: Demo_Yolo.py  Scan.py  activacion_voz.py  activate_robot.py  client.py  config_file.xml  demo_model.py  depth.py  hand.py  interrupt.py  jp_hand.py  pick_it.py  recover.py  saludar.py  take_photo.py  test_model.py  train.py  webscrapping.py  workarea.py
V1.0/Train/: train.py
V2.0/: .env.example  README.md  requirements.txt  run.py  run_hand_demo.py
V2.0/app/: __init__.py  config.py  routes_api.py  routes_realtime.py  routes_web.py  runtime_env.py  sockets.py  state.py
V2.0/demo/: webcam_calibrator.py
V2.0/scripts/: install_cloudflared.sh  install_hp60c_no_autosuspend.sh  start_cloudflare_tunnel.sh
V2.0/tests/: test_command_router.py  test_config.py  test_motion_profiles.py  test_robot_gateway.py  test_routes_api_depth.py  (+7 more)
V_COVA/: activacion_voz_cova.py  alt.py  asistente_cirujano.json  camera_pipeline.py  main.py  object_detection.py  robot_control.py  voice_comand.py
flagged/: log.csv
hp60c_portable_bundle/: README.md  dependencies_apt.txt  depth_web_ui.py  install_all.sh  run_all.sh  stop_all.sh
hp60c_portable_bundle/drivers/ascamera/: CMakeLists.txt
hp60c_portable_bundle/drivers/ascamera/configurationfiles/: hp60c_v2_00_20230704_configEncrypt.json  hp60cn_v2_00_20230704_configEncrypt.json  kunlun_v1_03_20240326Encrypt.json  tanggula_v2_00_20240218_configEncrypt.json
hp60c_portable_bundle/drivers/ascamera/include/: CameraSrv.h  LogRedirectBuffer.h
hp60c_portable_bundle/drivers/ascamera/launch/: ascamera.launch.py  changA.launch.py  hp60cn.launch.py  kondyor.launch.py  kunlun_a.launch.py  kunlun_c.launch.py
hp60c_portable_bundle/drivers/ascamera/libs/include/: as_camera_sdk_def.h  common.h
hp60c_portable_bundle/drivers/ascamera/libs/lib/aarch64-linux-gnu/: readme.md
hp60c_portable_bundle/drivers/ascamera/scripts/: angstrong-camera.rules  gettarget.sh
hp60c_portable_bundle/drivers/ascamera/src/: Camera.cpp  CameraPublisher.cpp  CameraSrv.cpp  ascamera_node.cpp
tests/: test_utils.py
(+141 files in other folders)
